Added htdocs/markitems.php: form to mark items as read (or unread, or whatever).
htdocs/smarty/templates/feeds.tpl: show item counts for each feed.
Added placeholder column to put update/status icon.

htdocs/smarty/templates/view.tpl: the entire page is now a form, so
can update status of items. Added radio buttons at top and bottom of
items. Don't display <h5> headers anymore. Don't display empty item
content. Moved the "no new articles" bit outside the form, so empty
feeds don't have pointless "submit" buttons.

htdocs/style.css: minor tweaks.

htdocs/index.php: get statistics for each feed.

lib/database.inc: added db_get_feed_counts(),
db_get_all_feed_counts(), db_mark_items().

--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -14,6 +14,10 @@ table#feeds {
 	width:			100%;
 }
 
+table#feeds .icon-col {
+	width:			32px;
+}
+
 .tools {
 	background-color:	yellow;
 	border:			1px solid orange;
@@ -84,7 +88,7 @@ h1 a {
 /* Title of item */
 .item_title {
 	font-family:		Arial, sans-serif;
-	font-size:		180%;
+	font-size:		144%;
 	font-weight:		bold;
 	text-decoration:	none;	/* I know it's a link. Don't
 					 * underline it. */
