--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -80,9 +80,54 @@ h1 a {
 
 /* Header box at top of item */
 .item-header {
-	border:			1px solid blue;
-	background-color:	LightBlue;
-	padding:		0.5em;
+	width:			100%;
+	background-color:	navy;
+	padding:		0px;
+	border-collapse:	separate;
+	border-spacing:		0px 0.3em;
+}
+
+.item-header td {
+	vertical-align:		top;
+	margin:			1em;
+}
+
+/* .date-box:
+ * Box at the left of the article header, with the publication date.
+ */
+.item-header .date-box {
+	background-color:	Navy;
+	width:			3.5em;
+	font-family:		sans-serif;
+	text-transform:		small-caps;
+	text-align:		center;
+	padding:		0px;
+}
+
+.item-header .date-box ul {
+	color:			cyan;
+	padding:		0px;
+	display:		inline;
+	margin:			0px;
+	list-style-position:	inside;
+	list-style-type:	none;
+}
+
+.date-box .day {
+	font-size:		130%;
+	font-weight:		bold;
+	margin-bottom:		0px;
+}
+
+.date-box .mon {
+	font-weight:		normal;
+	margin-top:		0.0em;
+}
+
+.date-box .time {
+	font-size:		60%;
+	font-weight:		normal;
+	margin-top:		0.4em;
 }
 
 /* Title of item */
@@ -92,6 +137,48 @@ h1 a {
 	font-weight:		bold;
 	text-decoration:	none;	/* I know it's a link. Don't
 					 * underline it. */
+}
+
+.item-header .info .item-title {
+	color:			LightBlue;
+	display:		inline;
+	margin-top:		0px;
+}
+
+/* .info: the box in the middle of the article header, with useful info
+ * like the title.
+ */
+.item-header .info {
+	padding-left:		0.5em;
+	padding-right:		0.5em;
+	border-left:		2px solid LightBlue;
+	border-right:		2px solid LightBlue;
+}
+
+.item-header .info .item-title a {
+	color:			LightBlue;
+	text-decoration:	none;
+}
+
+/* .icon-box: box for control/status icons on the right of the article
+ * header.
+ */
+.item-header .icon-box {
+	text-align:		right;
+	font-size:		66%;
+	width:			6em;
+}
+
+.icon-box ul {
+	color:			cyan;
+	padding:		0px;
+	display:		inline;
+	margin:			0px;
+}
+
+.icon-box ul li {
+	list-style-position:	inside;
+	list-style-type:	none;
 }
 
 /* Summary of item */
