--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -99,7 +99,7 @@ h1 a {
 	background-color:	Navy;
 	width:			3.5em;
 	font-family:		sans-serif;
-	text-transform:		small-caps;
+	font-variant:		small-caps;
 	text-align:		center;
 	padding:		0px;
 }
@@ -179,6 +179,13 @@ h1 a {
 .icon-box ul li {
 	list-style-position:	inside;
 	list-style-type:	none;
+}
+
+/* If both the summary and content are present, they're put inside a
+ * <div class="content-panes">
+ */
+.content-panes .item-summary {
+	display:		none;
 }
 
 /* Summary of item */
