--- a/htdocs/style-nojs.css
+++ b/htdocs/style-nojs.css
@@ -5,3 +5,15 @@
 .collapse-bar {
 	display:	none;
 }
+
+
+/* If both the summary and content are present, they're put inside a
+ * <div class="content-panes">
+ */
+.content-panes .item-summary {
+	display:		none;
+}
+
+.content-panes .item-content {
+	display:		block;
+}
