Added htdocs/editfeed.php, htdocs/editfeed.css: allow editing the user-configurable parts of a feed (the ones that don't get pulled in from the feed).
htdocs/smarty/templates/feeds.tpl: Display feed nickname instead of
title, if it's been set. Added "Edit" link, to edit options.

htdocs/update.php: in determining whether to use authentication, check
whether username/passwd is empty string, rather than whether it's
non-NULL.

lib/database.inc: Added db_update_feed_info(). db_update_feed() now
uses db_update_feed_info(). Use $dbh instead of $sth throughout.

--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -1,5 +1,8 @@
 /* Main stylesheet
  */
+/* XXX - Ought to split this up into the main stylesheet, and
+ * page-specific ones.
+ */
 body {
 	background-color:	white;
 }
