Split up giant unmanageable "style.css" into per-page CSS files. Each page now reads both "style.css" and "<somepage>.css".

--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -1,271 +1,6 @@
 /* Main stylesheet
  */
-/* XXX - Ought to split this up into the main stylesheet, and
- * page-specific ones.
- */
 body {
+	color:			black;
 	background-color:	white;
-}
-
-/*
- * Index of feeds
- */
-table#feeds {
-	border-width:		1px;
-	border-color:		black;
-	border-spacing:		0px 0px;	/* Space between cells, x,y */
-	width:			100%;
-}
-
-table#feeds .icon-col {
-	width:			32px;
-}
-
-.tools {
-	background-color:	yellow;
-	border:			1px solid orange;
-	margin-bottom:		1em;
-}
-
-table#feeds tr {
-	border:		1px dotted black;
-}
-
-table#feeds tr.odd-row {
-	background-color:	#dddddd;
-}
-
-table#feeds tr.even-row {
-/*	background-color:	white;*/
-	background-color:	inherit;
-}
-
-table#feeds tr td {
-/*	border:		1px dashed red;*/
-}
-
-/*
- * Feed view
- */
-
-body#view-body {
-	padding:		0px;
-}
-
-h1 a {
-	text-decoration:	none;	/* I know it's a link. Don't
-					 * underline it. */
-}
-
-/* Icon or image for the feed */
-.feed-icon {
-	float:			right;
-}
-
-/* Feed subtitle */
-.feed-subtitle {
-	border:			1px dashed orange;
-	background-color:	yellow;
-}
-
-/* Descriptive blurb about the feed */
-.feed-description {
-	border:			1px solid orange;
-	background-color:	yellow;
-}
-
-/***** view ************************************/
-/* navbar
- * Navigation bar, for going to earlier, later items.
- */
-.navbar {
-	width:			100%;
-	/* For some reason, the parent block has to have a "position"
-	 * property in order for its children to be positioned.
-	 * {relative, 0, 0}, of course, means "position this block
-	 * exactly where you normally would". Go fig.
-	 */
-	position:		relative;
-	top:			0px;
-	left:			0px;
-	outline:		1px solid red;
-}
-
-.navbar .earlier {
-	text-align:		left;
-	outline:		1px dotted blue;
-	position:		absolute;
-	top:			0px;
-	left:			0px;
-}
-
-.navbar .later {
-	text-align:		right;
-	outline:		1px dotted blue;
-	position:		absolute;
-	top:			0px;
-	right:			0px;
-}
-
-/* Overall box containing an item */
-.item {
-	margin-top:		2em;
-	margin-left:		0px;
-	clear:			both;
-}
-
-/* Header box at top of item */
-.item-header {
-	width:			100%;
-	background-color:	navy;
-	padding:		0px;
-	border-collapse:	separate;
-	border-spacing:		0px 0.3em;
-}
-
-.item-header td {
-	vertical-align:		top;
-	margin:			1em;
-}
-
-/* .date-box:
- * Box at the left of the article header, with the publication date.
- */
-.item-header .date-box {
-	background-color:	Navy;
-	width:			3.5em;
-	font-family:		sans-serif;
-	font-variant:		small-caps;
-	text-align:		center;
-	padding:		0px;
-}
-
-.item-header .date-box ul {
-	color:			cyan;
-	padding:		0px;
-	display:		inline;
-	margin:			0px;
-	list-style-position:	inside;
-	list-style-type:	none;
-}
-
-.date-box .day {
-	font-size:		130%;
-	font-weight:		bold;
-	margin-bottom:		0px;
-}
-
-.date-box .mon {
-	font-weight:		normal;
-	margin-top:		0.0em;
-}
-
-.date-box .time {
-	font-size:		60%;
-	font-weight:		normal;
-	margin-top:		0.4em;
-}
-
-/* Title of item */
-.item-header .item-title {
-	font-family:		Arial, sans-serif;
-	font-size:		144%;
-	font-weight:		bold;
-	text-decoration:	none;	/* I know it's a link. Don't
-					 * underline it. */
-	color:			LightBlue;
-	display:		block;
-	margin-top:		0px;
-	margin-bottom:		0.2em;
-}
-
-.item-header .feed-title {
-	font-family:		Arial, sans-serif;
-	font-size:		120%;
-	font-weight:		bold;
-	text-decoration:	none;	/* I know it's a link. Don't
-					 * underline it. */
-	color:			LightBlue;
-	display:		block;
-	margin-top:		0.2em;
-	margin-bottom:		0px;
-}
-
-.item-header .feed-title a {
-	text-decoration:	none;	/* I know it's a link. Don't
-					 * underline it. */
-	color:			LightBlue;
-}
-
-/* .info: the box in the middle of the article header, with useful info
- * like the title.
- */
-.item-header .info {
-	padding-left:		0.5em;
-	padding-right:		0.5em;
-	border-left:		2px solid LightBlue;
-	border-right:		2px solid LightBlue;
-}
-
-.item-header .info .item-title a {
-	color:			LightBlue;
-	text-decoration:	none;
-}
-
-/* .icon-box: box for control/status icons on the right of the article
- * header.
- */
-.item-header .icon-box {
-	text-align:		right;
-	font-size:		66%;
-	width:			6em;
-}
-
-.icon-box ul {
-	color:			cyan;
-	padding:		0px;
-	display:		inline;
-	margin:			0px;
-}
-
-.icon-box ul li {
-	list-style-position:	inside;
-	list-style-type:	none;
-}
-
-/* Summary of item */
-.item-summary {
-	border:			1px solid red;
-	font-family:		Times, serif;
-	padding:		0.5em;
-}
-
-/* Content of item */
-.item-content {
-	border:			1px solid blue;
-	font-family:		Times, serif;
-	padding:		0.5em;
-}
-
-/* expand-bar, collapse-bar
- * Bars at top and bottom of article, for expanding summary, or collapsing
- * content.
- */
-.collapse-bar {
-	width:			100%;
-	background-color:	#808080;
-	color:			white;
-	text-align:		center;
-}
-
-.expand-bar {
-	width:			100%;
-	background-color:	#808080;
-	color:			white;
-	text-align:		center;
-}
-
-/* Control box at bottom of item */
-.item-footer {
-	background-color:	pink;
 }
