--- a/htdocs/skins/default/view.css
+++ b/htdocs/skins/default/view.css
@@ -195,16 +195,32 @@ input[type="checkbox"].mark-check {
 	height:			1.2em;
 }
 
-/* Summary of item */
-.item-summary {
-	border:			1px solid red;
-	font-family:		Times, serif;
-	padding:		0.5em;
+/* The next two rules are for toggling between expanded and collapsed
+ * articles: the "item.tpl" and "item.js" set the <item which="...">
+ * attribute to either "summary" or "content". This CSS determines
+ * what to display in each case.
+ */
+.content-panes[which="summary"] .item-summary,
+.content-panes[which="content"] .item-content {
+	display:		block;
 }
 
-/* Content of item */
+.content-panes[which="summary"] .item-content,
+.content-panes[which="content"] .item-summary {
+	display:		none;
+}
+
+/* Summary of item */
+.item-summary,
 .item-content {
-	border:			1px solid blue;
+	border-top-width:	0px;
+	border-left-width:	2px;
+	border-right-width:	2px;
+	border-bottom-width:	0px;
+	border-left-style:	outset;
+	border-right-style:	outset;
+	border-color:		navy;
+
 	font-family:		Times, serif;
 	padding:		0.5em;
 }
@@ -213,16 +229,11 @@ input[type="checkbox"].mark-check {
  * Bars at top and bottom of article, for expanding summary, or collapsing
  * content.
  */
+.expand-bar,
 .collapse-bar {
 	width:			100%;
-	background-color:	#808080;
-	color:			white;
-	text-align:		center;
-}
-
-.expand-bar {
-	width:			100%;
-	background-color:	#808080;
+	height:			1.0em;
+	background-color:	#6060ff;
 	color:			white;
 	text-align:		center;
 }
