A bunch of minor updates:
htdocs/editfeed.php: Redirect to view.php when done. Removed
artificial error conditions.

htdocs/addfeed.php: Redirect to index.php when done.

htdocs/unsubscribe.php: Start of better error-handling.

htdocs/skins/default/unsubscribe.tpl: Show site and feed URLs when
asking for confirmation to unsubscribe, so user can make sure that's
what ve wants to do.

htdocs/skins/default/unsubscribe.css: Use fixed-width font for URLs.

htdocs/skins/default/view.tpl: Added useful links.

htdocs/skins/default/view.css: Set body margin to 0, so elements can
go right up to the sides of the browser window.

htdocs/update.php: Trace statements. Should be removed.

--- a/htdocs/skins/default/view.css
+++ b/htdocs/skins/default/view.css
@@ -3,8 +3,10 @@
  */
 
 body#view-body {
-	margin-left:		2px;
-	margin-right:		2px;
+	margin-top:		0px;
+	margin-left:		0px;
+	margin-right:		0px;
+	margin-bottom:		0px;
 }
 
 h1 a {
@@ -65,7 +67,8 @@ h1 a {
 /* Overall box containing an item */
 .item {
 	margin-top:		2em;
-	margin-left:		0px;
+	margin-left:		2px;
+	margin-right:		2px;
 	clear:			both;
 }
 
