--- a/htdocs/skins/default/view.css
+++ b/htdocs/skins/default/view.css
@@ -39,7 +39,7 @@ h1 a {
 	margin-top:		1em;
 	margin-bottom:		1em;
 	padding-left:		1em;
-	padding-top:		0px;;
+	padding-top:		0px;
 	padding-bottom:		0.2em;
 }
 
