Redid the way items are displayed: now the toggle bars, summary, and content are all direct descendants of <div content-panes>, and CSS determines what is and isn't shown.

--- a/htdocs/skins/default/style-nojs.css
+++ b/htdocs/skins/default/style-nojs.css
@@ -1,19 +1,11 @@
 /* style-nojs.css
  * This file is included only when the browser has JavaScript turned off.
  */
-
-.collapse-bar {
-	display:	none;
+.collapse-bar,
+.expand-bar {
+	display:	none !important;
 }
-
 
 /* If both the summary and content are present, they're put inside a
  * <div class="content-panes">
  */
-.content-panes .item-summary {
-	display:		none;
-}
-
-.content-panes .item-content {
-	display:		block;
-}
