--- a/htdocs/skins/default/view.css
+++ b/htdocs/skins/default/view.css
@@ -194,6 +194,11 @@ h1 a {
 	text-decoration:	none;
 }
 
+.item-header .info .item-author {
+	margin-top:		0.1em;
+	margin-bottom:		0.1em;
+}
+
 /* .icon-box: box for control/status icons on the right of the article
  * header.
  */
