--- a/htdocs/skins/default/view.css
+++ b/htdocs/skins/default/view.css
@@ -9,14 +9,23 @@ body {
 	margin-bottom:		0px;
 }
 
+h1 {
+	margin-left:		1em;
+}
+
 h1 a {
 	text-decoration:	none;	/* I know it's a link. Don't
 					 * underline it. */
 }
 
+p {
+	margin:			1em;
+}
+
 /* Icon or image for the feed */
 .feed-icon {
 	float:			right;
+	margin:			1em;
 }
 
 /* Feed subtitle */
@@ -72,7 +81,8 @@ h1 a {
  * Navigation bar, for going to earlier, later items.
  */
 .navbar {
-	width:			100%;
+	margin-left:		1em;
+	margin-right:		1em;
 	/* For some reason, the parent block has to have a "position"
 	 * property in order for its children to be positioned.
 	 * {relative, 0, 0}, of course, means "position this block
@@ -98,6 +108,13 @@ h1 a {
 	position:		absolute;
 	top:			0px;
 	right:			0px;
+}
+
+.button-box {
+	margin-left:		1em;
+	margin-right:		1em;
+	margin-top:		0.5em;
+	margin-bottom:		0.5em;
 }
 
 .date-header {
