Started adding JavaScript magic.
htdocs/skins/fancy/feeds.tpl: Add onclick= attributes for updating feeds.
Tell JavaScript scripts where to find skin files.

htdocs/skins/fancy/index.css: Nail down size of icon cell in table.

htdocs/skins/fancy/feeds.js (added): Ajax functions for index view.

lib/common.inc: Added jsonify().

htdocs/update.php: Use jsonify() for JSON output.

AUTHORS: Added credit for icons used in feed update.

lib/database.inc: db_update_feed() returns count of old/new/updated
items.

--- a/htdocs/skins/fancy/index.css
+++ b/htdocs/skins/fancy/index.css
@@ -10,10 +10,15 @@ table#feeds {
 
 table#feeds .icon-col {
 	width:			32px;
+	/* Height is crucial: 22px appears to be the smallest height
+	 * that'll accommodate the update icon without ugly resizing.
+	 */
+	height:			22px;
+	padding:		0px;
+	text-align:		center;
 }
 
 table#feeds tr {
-	border:		1px dotted black;
 }
 
 table#feeds tr.odd-row {
