Begun work on marking items as read/unread on the fly.
htdocs/skins/fancy/view.js: Added mark_item()

htdocs/skins/fancy/item.tpl: Added 'state=' attribute to item, so it
can be marked on the fly, and 'onclick=' handler for checkboxes. Added
pub_date to item header, so that when items are removed from the page,
there won't be stray dates floating around.

htdocs/skins/fancy/view.css: Added rules for displaying collapsed
items.

htdocs/skins/fancy/view.tpl: Removed date between items, so items can
be removed one at a time.

--- a/htdocs/skins/fancy/view.css
+++ b/htdocs/skins/fancy/view.css
@@ -134,6 +134,22 @@ p {
 	clear:			both;
 }
 
+.item[state="read"] .item-header {
+	/* Mozilla: */
+	-moz-border-radius-bottomleft:	20px;
+	-moz-border-radius-bottomright:	20px;
+
+	/* Safari: */
+	-webkit-border-bottom-left-radius:	20px;
+	-webkit-border-bottom-right-radius:	20px;
+}
+
+/* If an item has been marked as read, collapse it to just a header */
+.item[state="read"] .content-panes,
+.item[state="read"] .item-footer {
+	display:		none;
+}
+
 /* Header box at top of item */
 .item-header {
 	width:			100%;
