htdocs/markitems.php: Accept list of items from Ajax.
htdocs/skins/fancy/view.js: First pass at marking items as read
immediately.

htdocs/skins/fancy/view.css: Opacity for read items.

htdocs/skins/fancy/view.tpl: No JavaScript initialization.

Makefile: Bumped up version number.

schema.sql: longer columns for URLs.

--- a/htdocs/skins/fancy/view.css
+++ b/htdocs/skins/fancy/view.css
@@ -129,6 +129,7 @@ p {
 	/* Mozilla: */
 	-moz-border-radius-bottomleft:	20px;
 	-moz-border-radius-bottomright:	20px;
+	-moz-opacity:	.40;
 
 	/* Safari: */
 	-webkit-border-bottom-left-radius:	20px;
