htdocs/skins/fancy/view.js, htdocs/skins/fancy/item.tpl, htdocs/skins/fancy/view.css: Change appearance of items in two stages: once when the "mark as read" box has been checked, and once when the server has confirmed that the item has been marked.
htdocs/skins/default/setskin.tpl: fixed name of form to not interfere
with cookie of the same name.

--- a/htdocs/skins/fancy/view.css
+++ b/htdocs/skins/fancy/view.css
@@ -142,6 +142,10 @@ p {
 	display:		none;
 }
 
+.item[deleted="yes"] {
+	-moz-opacity:	.40;
+}
+
 /* Header box at top of item */
 .item-header {
 	width:			100%;
