Take advantage of gray background.

--- a/htdocs/skins/fancy/index.css
+++ b/htdocs/skins/fancy/index.css
@@ -26,7 +26,7 @@ table#feeds tr.odd-row {
 }
 
 table#feeds tr.even-row {
-	background-color:	inherit;
+	background-color:	white;
 }
 
 .tools {
@@ -41,6 +41,9 @@ table#feeds tr.even-row {
 .tools li {
 	display:		inline;
 	background-color:	#e0e0e0;
+}
+body {
+	background-image:	url(gray-bg.jpg)
 }
 
 .tools a {
