htdocs/skins/fancy/view.js: Remove focus from "mark as read" button when clicked, so that user can press <space> to scroll down.
htdocs/skins/fancy/style.css, htdocs/skins/fancy/view.css: Explicitly specify serif font.

htdocs/skins/fancy/item.tpl: use <object> instead of <div> for article
contents. This tends to protect neighbors against bad markup (like
missing close-element tags).

php.ini: add hack path, for convenience.

lib/parse-feed.inc: a bunch of hooks to remove ads, web bugs, etc.

--- a/htdocs/skins/fancy/view.css
+++ b/htdocs/skins/fancy/view.css
@@ -312,7 +312,8 @@ input[type="checkbox"].mark-check {
 	border-right-style:	outset;
 	border-color:		navy;
 
-	font-family:		Times, serif;
+/*	font-family:		Times, serif;*/
+	font-family:		serif;
 	padding:		0.5em;
 	background-color:	white;
 }
