First draft of working view skin: load items as JavaScript objects, and load them dynamically.

--- a/htdocs/skins/fancy2/view.css
+++ b/htdocs/skins/fancy2/view.css
@@ -116,6 +116,11 @@ p {
 	margin-bottom:		0.5em;
 }
 
+ul.items {
+	list-style-type:	none;
+	padding-left:		0px;
+}
+
 /* XXX - Attempt at prettier form buttons
 input[type="reset"],
 input[type="submit"] {
