--- a/htdocs/skins/fancy2/view.css
+++ b/htdocs/skins/fancy2/view.css
@@ -8,7 +8,7 @@ body {
 	margin-right:		0px;
 	margin-bottom:		0px;
 	background-image:	url(gray-bg.jpg);
-	scrollbar-arrow-color:	blue;
+/*	scrollbar-arrow-color:	blue;*/
 }
 
 h1 {
